# OpenGL-Starter

./: .gitignore  CMakeLists.txt  CMakePresets.json  NOTES.md  README.md  install.sh  main.cpp  run.sh
drafts/: CMakeLists.txt  main.cpp
scripts/: install-deps.sh
